--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
                             <div class="error-message" id="serviceError"></div>
                         </div>
                         <div class="form-group">
-                            <label for="message">Please enter the details of your request *</label>
+                            <label for="message">Please enter the details of your request</label>
                             <textarea id="message" name="message" class="form-control"></textarea>
                             <div class="error-message" id="messageError"></div>
                         </div>
